<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="193dp"
        android:layout_height="37dp"
        android:contentDescription="@string/SplashLogo"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:background="@color/primary"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/connexion" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pas_de_compte_inscrivez_vous_ici"
        android:textColor="@color/primary"
        android:gravity="center"
        android:textSize="12sp"
        android:padding="16dp" />

</LinearLayout>